Add content about AlphaGo technical details

--- a/Introduction.tex
+++ b/Introduction.tex
@@ -1,1 +1,11 @@
 \section{introduction}
+\subsection{Go}
+This simplicity, though, is deceptive. In a truly simple game, like noughts and crosses, every possible outcome, all the way to the end of a game, can be calculated. This brute-force approach means a computer can always work out which move is the best in a given situation. The most complex game to be "solved" this way is draughts, in which around 1020 (a hundred billion billion) different matches are possible. In 2007, after 18 years of effort, researchers announced that they had come up with a provably optimum strategy.
+
+But a draughts board is only 8x8. A Go board’s size means that the number of games that can be played on it is enormous: a rough-and-ready guess gives around 10170. Analogies fail when trying to describe such a number. It is nearly a hundred of orders of magnitude more than the number of atoms in the observable universe, which is somewhere in the region of 1080. Any one of Go’s hundreds of turns has about 250 possible legal moves, a number called the branching factor. Choosing any of those will throw up another 250 possible moves, and so on until the game ends. As Demis Hassabis, one of DeepMind’s founders, observes, all this means that Go is impervious to attack by mathematical brute force.
+
+But there is more to the game’s difficulty than that. Though the small board and comparatively restrictive rules of chess mean there are only around 1047 different possible games, and its branching factor is only 35, that does, in practice, mean chess is also unsolvable in the way that draughts has been solved. Instead, chess programs filter their options as they go along, selecting promising-looking moves and reserving their number-crunching prowess for the simulation of the thousands of outcomes that flow from those chosen few. This is possible because chess has some built-in structure that helps a program understand whether or not a given position is a good one. A knight is generally worth more than a pawn, for instance; a queen is worth more than either.
+
+Working out who is winning in Go is much harder. A stone's value comes only from its location relative to the other stones on the board, which changes with every move. At the same time, small tactical decisions can have, as many Go player knows, huge strtegic consequences later on. There is plenty of structure - Go players talk of features such as ladders, walls and false eyes - but these emerge organically from the rules, rather than being prescribed by them.
+
+Even good players are not able to talk about the exact strategies. It seems like that, this game is more about intuition, which is different from the computer programming job.
