--- a/RecentNews.tex
+++ b/RecentNews.tex
@@ -1,1 +1,8 @@
-\section{background}
+\section{recent news}
+Recent years have witnessed rapid development in the area of AI. One improvement is the capability of computer to play chess. 
+
+Go is an ancient game that first appeared in China. It is popular especially in East Asian. However, an event that happened a few days ago challenged this belief. Researchers at Google managed to develop the AI program the beat the chess champion of Europe. 
+
+The game of Go has long been viewed as the most challenging of classic games for artificial intelligence owing to its enoumous search space and the difficulty of evaluating board positions and moves. Due to the computing complexity, it has been long been considered that the computer won’t be able to beat human in this game. This is regarded as a great improvement considering the computing complexity of Go. Benefited from the development of computing capability of computers and the application of machine learning technique, it seems that human intelligence are likely to be able to beaten by machine intelligence.
+
+Some great techniques were come up with by intelligent people in the process to improve the intelligence of computers. There have been generally three stages in the process of trying to solve the problem of chess playing. The first is rule based and searching algorithm; the second stage is about Monte-Carlo Go~\cite{brugmann1993monte, enzenberger2010fuego}; the third stage is the application of deep neural network.
