--- a/AlphaGo.tex
+++ b/AlphaGo.tex
@@ -529,6 +529,7 @@
 %\input{introduction}
 \input{introduction}
 \input{background}
+\input{Related}
 \input{GoogleAlphaGoTechnicalDetails}
 
 \section{Goals}
